# nest-deck

./: .env.example  .gitignore  NestDeck.spec  README.MD  RUNNING.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  database.py  events.py  main.py  models.py  schemas.py  seed.py
backend/app/routes/: __init__.py  actions.py  cast.py  categories.py  events.py  fire.py  pages.py  profiles.py  settings.py  system.py  tiles.py
backend/app/services/: __init__.py  autostart.py  cast.py  demo.py  fetch.py  launcher.py  meeting.py  obs.py  pc.py  registry.py  settings.py  spotify.py
desktop/: app.py  firewall.py  nestdeck.py  paths.py  requirements.txt  server.py  splash.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: theme.ts  types.ts
frontend/src/lib/components/deck/: ActionPicker.svelte  HeartbeatKeepAlive.svelte  PageTabs.svelte  StatusBar.svelte  Tile.svelte  TileGrid.svelte
frontend/src/lib/components/editor/: ActionCatalog.svelte  ActionEditorModal.svelte  CastPanel.svelte  CategorySection.svelte  EditableGrid.svelte  EditableTile.svelte  IconPicker.svelte  OnboardingWizard.svelte  (+3 more)
frontend/src/lib/services/: api.ts  sound.ts  sse.ts
frontend/src/lib/stores/: editMode.svelte.ts  profile.svelte.ts  status.svelte.ts  theme.svelte.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/editor/: +page.svelte
